RESOLVED FIXED50524
REGRESSION: Text in Find indicator is vertically flipped
https://bugs.webkit.org/show_bug.cgi?id=50524
Summary REGRESSION: Text in Find indicator is vertically flipped
mitz
Reported 2010-12-04 13:53:38 PST
Text in the yellow Find indicator is vertically flipped.
Attachments
Adam Roben (:aroben)
Comment 1 2010-12-06 09:07:27 PST
Anders Carlsson
Comment 2 2010-12-06 11:54:08 PST
Note You need to log in before you can comment on or make changes to this bug.