REGRESSION: Text in Find indicator is vertically flipped https://bugs.webkit.org/show_bug.cgi?id=50524 <rdar://problem/8732978>

Reviewed by Dan Bernstein.

Don't flip the graphics context.

* UIProcess/FindIndicator.cpp:
(WebKit::FindIndicator::draw):

Canonical link: https://commits.webkit.org/63802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73382 268f45cc-cd09-0410-ab3c-d52691b4dbfc